[package]
name = "nagios-range"
version = "0.2.0"
edition = "2021"
authors = ["Peter Sebastian Pütz <ppuetz@protonmail.com>"]
repository = "https://github.com/puetzp/nagios-range"
documentation = "https://docs.rs/nagios-range"
readme = "README.md"
license = "MIT"
description = "Provides types to parse and operate on Nagios ranges"
keywords = ["nagios", "parsing"]
